# Finetune-GPT-3.5-for-Authors

./: .gcloudignore  .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  api_management.py  app.py  chunking.py  cleanup.py  config.py  convert_file.py  data_preparation.py  file_handling.py  forms.py  index.html  initialize_constants.py  landing.css  logging_config.py  openai_client.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_dev_server.py  send_email.py  set_folders.py  training_management.py
ebook_conversion/: chapter_check.py  convert_file.py  docx_conversion.py  epub_conversion.py  ocr.py  pdf_conversion.py  text_conversion.py
finetune/: api_management.py  chunking.py  data_preparation.py  openai_client.py  shared_resources.py  training_management.py
flask_app/: LICENSE.txt  README.md  app.py  file_handling.py  forms.py  initialize_constants.py  logging_config.py  send_email.py  set_folders.py
flask_app/ebook_conversion/: pdf_conversion.py
flask_app/finetune/: api_management.py  openai_client.py  training_management.py
flask_app/static/css/: style.css
flask_app/static/html/: terms.html
flask_app/static/js/: dark-mode.js
flask_app/templates/: contact-us.html  convert-ebook.html  finetune.html  message_sent.html
flask_app/upload_folder/NN88AT9P24/: Once Upon a Saturn Moon.docx
src/: __init__.py  cache.py  decorators.py  error_handling.py  extensions.py  file_handling.py  logging_config.py  saas_decorators.py  supabase.py  supabase_client.py  type_logger.py  utils.py
src/accounts/: forms.py  models.py  stripe.py  utils.py  views.py
src/binders/: credits.py  forms.py  utils.py  views.py
src/core/: forms.py  utils.py  views.py
src/free/: forms.py  utils.py  views.py
src/mailerlite/: forms.py  utils.py  views.py
src/prosepal/: __init__.py  decorators.py  error_handling.py  file_handling.py  logging_config.py  supabase.py  supabase_validator.py  type_logger.py  utils.py
src/prosepal/accounts/: forms.py  utils.py  views.py
src/prosepal/binders/: credits.py  forms.py  utils.py  views.py
src/prosepal/core/: forms.py  utils.py  views.py
src/prosepal/free/: controller.py  forms.py  utils.py  views.py
src/prosepal/mailerlite/: forms.py  utils.py  views.py
src/stripe/: stripe.py  utils.py  views.py
src/templates/: base.html  finetune-footer.html  forms-base.html  full-base.html  header.html  ml-join-waitlist.html  normal-base.html  normal-footer.html  password-base.html
static/: dark-mode.js  index.html  instructions.html  landing.css  privacy.html  style.css  terms.html
static/css/: landing.css  style.css
static/html/: index.html  privacy.html  terms.html
static/js/: dark-mode.js
templates/: contact-us.html  convert-ebook.html  finetune.html  index.html  instructions.html  message_sent.html
(+109 files in other folders)
